Changed all the functions and run the code in the notebook test

--- a/EX_6_Tatiana_results.ipynb
+++ b/EX_6_Tatiana_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,20 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bakwe\\AppData\\Local\\Temp\\ipykernel_12436\\943203105.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\bakwe\\AppData\\Local\\Temp\\ipykernel_25444\\943203105.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_clean[columns_fill] = df_clean[columns_fill].apply(lambda col: col.fillna(col.mean()))\n",
-      "C:\\Users\\bakwe\\AppData\\Local\\Temp\\ipykernel_12436\\943203105.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\bakwe\\AppData\\Local\\Temp\\ipykernel_25444\\943203105.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -498,7 +498,7 @@
        "[5 rows x 59 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
        "[8 rows x 47 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to split data (exercise b)\n",
+    "def splitdata(df, target_column):\n",
+    "    X = df.drop(target_column, axis=1)\n",
+    "    y = df[target_column]\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "    return X_train, X_test, y_train, y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train:       encounter_id  hospital_id   age        bmi  elective_surgery  \\\n",
+      "952         160030          149  50.0        NaN                 0   \n",
+      "4283        235736           81  63.0  31.835347                 1   \n",
+      "5521        242191          118  63.0  25.062103                 0   \n",
+      "9655        191087           89  79.0  25.015328                 0   \n",
+      "3549        271596          118  31.0  19.228087                 0   \n",
+      "...            ...          ...   ...        ...               ...   \n",
+      "6062        201939          118  59.0        NaN                 1   \n",
+      "5494        227860           31  67.0  18.301839                 0   \n",
+      "5703        190499          118  85.0  18.296026                 1   \n",
+      "913         165385          118  43.0  23.661272                 1   \n",
+      "7681        242945          118  23.0  22.496401                 0   \n",
+      "\n",
+      "             ethnicity gender  height hospital_admit_source  \\\n",
+      "952          Caucasian      F  170.20  Emergency Department   \n",
+      "4283          Hispanic      M  195.59        Operating Room   \n",
+      "5521  African American      M  170.20  Emergency Department   \n",
+      "9655         Caucasian      F  152.40  Emergency Department   \n",
+      "3549  African American      M  170.20  Emergency Department   \n",
+      "...                ...    ...     ...                   ...   \n",
+      "6062         Caucasian      M  167.60        Operating Room   \n",
+      "5494         Caucasian      F  157.50                 Floor   \n",
+      "5703         Caucasian      M  170.20        Operating Room   \n",
+      "913          Caucasian      M  177.80  Emergency Department   \n",
+      "7681         Caucasian      M  190.50  Emergency Department   \n",
+      "\n",
+      "               icu_admit_source  ...  leukemia lymphoma  \\\n",
+      "952        Accident & Emergency  ...         0        0   \n",
+      "4283  Operating Room / Recovery  ...         0        0   \n",
+      "5521       Accident & Emergency  ...         0        0   \n",
+      "9655       Accident & Emergency  ...         0        0   \n",
+      "3549       Accident & Emergency  ...         0        0   \n",
+      "...                         ...  ...       ...      ...   \n",
+      "6062  Operating Room / Recovery  ...         0        0   \n",
+      "5494                      Floor  ...         0        0   \n",
+      "5703  Operating Room / Recovery  ...         0        0   \n",
+      "913   Operating Room / Recovery  ...         0        0   \n",
+      "7681       Accident & Emergency  ...         0        0   \n",
+      "\n",
+      "     solid_tumor_with_metastasis  Binary  ethnicity_African American  \\\n",
+      "952                            0       0                       False   \n",
+      "4283                           0       1                       False   \n",
+      "5521                           0       1                        True   \n",
+      "9655                           0       0                       False   \n",
+      "3549                           0       1                        True   \n",
+      "...                          ...     ...                         ...   \n",
+      "6062                           0       1                       False   \n",
+      "5494                           0       0                       False   \n",
+      "5703                           0       1                       False   \n",
+      "913                            0       1                       False   \n",
+      "7681                           0       1                       False   \n",
+      "\n",
+      "      ethnicity_Asian  ethnicity_Caucasian  ethnicity_Hispanic  \\\n",
+      "952             False                 True               False   \n",
+      "4283            False                False                True   \n",
+      "5521            False                False               False   \n",
+      "9655            False                 True               False   \n",
+      "3549            False                False               False   \n",
+      "...               ...                  ...                 ...   \n",
+      "6062            False                 True               False   \n",
+      "5494            False                 True               False   \n",
+      "5703            False                 True               False   \n",
+      "913             False                 True               False   \n",
+      "7681            False                 True               False   \n",
+      "\n",
+      "      ethnicity_Native American  ethnicity_Other/Unknown  \n",
+      "952                       False                    False  \n",
+      "4283                      False                    False  \n",
+      "5521                      False                    False  \n",
+      "9655                      False                    False  \n",
+      "3549                      False                    False  \n",
+      "...                         ...                      ...  \n",
+      "6062                      False                    False  \n",
+      "5494                      False                    False  \n",
+      "5703                      False                    False  \n",
+      "913                       False                    False  \n",
+      "7681                      False                    False  \n",
+      "\n",
+      "[6557 rows x 58 columns]\n",
+      "X_test:       encounter_id  hospital_id   age        bmi  elective_surgery  \\\n",
+      "136         255681          118  64.0  35.951557                 1   \n",
+      "4882        271074          118  63.0  31.095278                 0   \n",
+      "2313        252155          118  74.0  22.070312                 1   \n",
+      "1886        188562          118  65.0        NaN                 0   \n",
+      "3000        169616           77  77.0  28.343555                 0   \n",
+      "...            ...          ...   ...        ...               ...   \n",
+      "4660        167729           33  88.0  22.148438                 0   \n",
+      "7785        274435           77  74.0  28.632002                 0   \n",
+      "7579        163963          118  81.0  28.503214                 0   \n",
+      "1260        204421           83  55.0  27.407810                 1   \n",
+      "3153        222953          118  39.0  28.515625                 0   \n",
+      "\n",
+      "             ethnicity gender  height hospital_admit_source  \\\n",
+      "136          Caucasian      M  170.00        Operating Room   \n",
+      "4882         Caucasian      M  182.00  Emergency Department   \n",
+      "2313          Hispanic      M  160.00        Operating Room   \n",
+      "1886         Caucasian      M  180.30                 Floor   \n",
+      "3000  African American      M  175.30  Emergency Department   \n",
+      "...                ...    ...     ...                   ...   \n",
+      "4660         Caucasian      F  160.00  Emergency Department   \n",
+      "7785         Caucasian      F  152.40  Emergency Department   \n",
+      "7579         Caucasian      F  165.00  Emergency Department   \n",
+      "1260         Caucasian      M  195.59        Operating Room   \n",
+      "3153          Hispanic      F  160.00  Emergency Department   \n",
+      "\n",
+      "               icu_admit_source  ...  leukemia lymphoma  \\\n",
+      "136   Operating Room / Recovery  ...         0        0   \n",
+      "4882       Accident & Emergency  ...         0        0   \n",
+      "2313  Operating Room / Recovery  ...         0        0   \n",
+      "1886                      Floor  ...         0        0   \n",
+      "3000       Accident & Emergency  ...         0        0   \n",
+      "...                         ...  ...       ...      ...   \n",
+      "4660       Accident & Emergency  ...         0        0   \n",
+      "7785       Accident & Emergency  ...         0        0   \n",
+      "7579       Accident & Emergency  ...         0        0   \n",
+      "1260  Operating Room / Recovery  ...         0        0   \n",
+      "3153       Accident & Emergency  ...         0        0   \n",
+      "\n",
+      "     solid_tumor_with_metastasis  Binary  ethnicity_African American  \\\n",
+      "136                            0       1                       False   \n",
+      "4882                           0       1                       False   \n",
+      "2313                           0       1                       False   \n",
+      "1886                           0       1                       False   \n",
+      "3000                           1       1                        True   \n",
+      "...                          ...     ...                         ...   \n",
+      "4660                           0       0                       False   \n",
+      "7785                           0       0                       False   \n",
+      "7579                           0       0                       False   \n",
+      "1260                           0       1                       False   \n",
+      "3153                           0       0                       False   \n",
+      "\n",
+      "      ethnicity_Asian  ethnicity_Caucasian  ethnicity_Hispanic  \\\n",
+      "136             False                 True               False   \n",
+      "4882            False                 True               False   \n",
+      "2313            False                False                True   \n",
+      "1886            False                 True               False   \n",
+      "3000            False                False               False   \n",
+      "...               ...                  ...                 ...   \n",
+      "4660            False                 True               False   \n",
+      "7785            False                 True               False   \n",
+      "7579            False                 True               False   \n",
+      "1260            False                 True               False   \n",
+      "3153            False                False                True   \n",
+      "\n",
+      "      ethnicity_Native American  ethnicity_Other/Unknown  \n",
+      "136                       False                    False  \n",
+      "4882                      False                    False  \n",
+      "2313                      False                    False  \n",
+      "1886                      False                    False  \n",
+      "3000                      False                    False  \n",
+      "...                         ...                      ...  \n",
+      "4660                      False                    False  \n",
+      "7785                      False                    False  \n",
+      "7579                      False                    False  \n",
+      "1260                      False                    False  \n",
+      "3153                      False                    False  \n",
+      "\n",
+      "[2811 rows x 58 columns]\n",
+      "y_train: 952     1\n",
+      "4283    0\n",
+      "5521    0\n",
+      "9655    0\n",
+      "3549    0\n",
+      "       ..\n",
+      "6062    0\n",
+      "5494    0\n",
+      "5703    0\n",
+      "913     0\n",
+      "7681    0\n",
+      "Name: diabetes_mellitus, Length: 6557, dtype: int64\n",
+      "y_test: 136     0\n",
+      "4882    1\n",
+      "2313    0\n",
+      "1886    0\n",
+      "3000    1\n",
+      "       ..\n",
+      "4660    0\n",
+      "7785    0\n",
+      "7579    0\n",
+      "1260    0\n",
+      "3153    0\n",
+      "Name: diabetes_mellitus, Length: 2811, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Call the splitdata function\n",
+    "X_train, X_test, y_train, y_test = splitdata(df_processed, 'diabetes_mellitus')\n",
+    "\n",
+    "# Now you can print the values\n",
+    "print(f'X_train: {X_train}')\n",
+    "print(f'X_test: {X_test}')\n",
+    "print(f'y_train: {y_train}')\n",
+    "print(f'y_test: {y_test}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +1090,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to train the model and calculate metrics (exercise d and i)\n",
+    "def model(X_train, X_test, y_train, y_test):\n",
+    "    model = LogisticRegression()\n",
+    "    model.fit(X_train, y_train)\n",
+    "    train_predictions = model.predict_proba(X_train)[:, 1]\n",
+    "    test_predictions = model.predict_proba(X_test)[:, 1]\n",
+    "    X_train['predictions'] = train_predictions\n",
+    "    X_test['predictions'] = test_predictions\n",
+    "    train_roc_auc = roc_auc_score(y_train, train_predictions)\n",
+    "    test_roc_auc = roc_auc_score(y_test, test_predictions)\n",
+    "    \n",
+    "    print(\"Train ROC AUC:\", train_roc_auc)\n",
+    "    print(\"Test ROC AUC:\", test_roc_auc)\n",
+    "    \n",
+    "    return train_roc_auc, test_roc_auc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train ROC AUC: 0.6703545314832863\n",
+      "Test ROC AUC: 0.6689398850455878\n",
+      "(0.6703545314832863, 0.6689398850455878)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Execute training and metrics calculations\n",
+    "features = ['age', 'height', 'weight', 'aids', 'cirrhosis', 'hepatic_failure',\n",
+    "            'immunosuppression', 'leukemia', 'lymphoma', 'solid_tumor_with_metastasis']\n",
+    "target = ['diabetes_mellitus']  \n",
+    "X_train = X_train[features] \n",
+    "X_test = X_test[features]\n",
+    "y_train = y_train\n",
+    "y_test = y_test\n",
+    "result = model(X_train, X_test, y_train, y_test)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
