--- a/HW3/notebook/test_notebook.ipynb
+++ b/HW3/notebook/test_notebook.ipynb
@@ -2,36 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "id": "f612e2ec-22e7-46f5-9a12-544d144ac4d4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'split' from 'HW3.HW3.features.data_cleaning' (C:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\HW3\\HW3\\features\\data_cleaning.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\HW3\\notebook\\test_notebook.ipynb Cell 1\u001b[0m line \u001b[0;36m8\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bakwe/Documents/GitHub/Git%20extra/HW3/HW3/notebook/test_notebook.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mHW3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mHW3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfeatures\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata_cleaning\u001b[39;00m \u001b[39mimport\u001b[39;00m process_data\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/bakwe/Documents/GitHub/Git%20extra/HW3/HW3/notebook/test_notebook.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mHW3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mHW3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfeatures\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata_cleaning\u001b[39;00m \u001b[39mimport\u001b[39;00m clean_na\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/bakwe/Documents/GitHub/Git%20extra/HW3/HW3/notebook/test_notebook.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mHW3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mHW3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfeatures\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata_cleaning\u001b[39;00m \u001b[39mimport\u001b[39;00m split\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'split' from 'HW3.HW3.features.data_cleaning' (C:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\HW3\\HW3\\features\\data_cleaning.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(r'C:\\Users\\bakwe\\Documents\\GitHub\\Git extra\\HW3\\HW3')\n",
+    "# Import packages\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import os\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from scipy import stats\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "import HW3\n",
-    "from HW3.HW3.features.data_loading import loaddata\n",
-    "from HW3.HW3.features.data_cleaning import process_data\n",
-    "from HW3.HW3.features.data_cleaning import clean_na\n",
-    "from HW3.HW3.features.data_cleaning import split\n"
+    "from HW3.features.data_loading import loaddata\n",
+    "from HW3.features.data_cleaning import process_data\n",
+    "from HW3.features.splitdata import splitdata\n",
+    "from HW3.features.model import model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "85b6cb63",
    "metadata": {},
    "outputs": [
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "b253f991",
    "metadata": {},
    "outputs": [
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "id": "54483fec",
    "metadata": {},
    "outputs": [],
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "id": "6ec14708",
    "metadata": {},
    "outputs": [
@@ -252,12 +251,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "88d7a428",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train:       Unnamed: 0  encounter_id  hospital_id   age        bmi  \\\n",
+      "952          952        160030          149  50.0        NaN   \n",
+      "4283        4283        235736           81  63.0  31.835347   \n",
+      "5521        5521        242191          118  63.0  25.062103   \n",
+      "9655        9655        191087           89  79.0  25.015328   \n",
+      "3549        3549        271596          118  31.0  19.228087   \n",
+      "...          ...           ...          ...   ...        ...   \n",
+      "6062        6062        201939          118  59.0        NaN   \n",
+      "5494        5494        227860           31  67.0  18.301839   \n",
+      "5703        5703        190499          118  85.0  18.296026   \n",
+      "913          913        165385          118  43.0  23.661272   \n",
+      "7681        7681        242945          118  23.0  22.496401   \n",
+      "\n",
+      "      elective_surgery         ethnicity gender  height hospital_admit_source  \\\n",
+      "952                  0         Caucasian      F  170.20  Emergency Department   \n",
+      "4283                 1          Hispanic      M  195.59        Operating Room   \n",
+      "5521                 0  African American      M  170.20  Emergency Department   \n",
+      "9655                 0         Caucasian      F  152.40  Emergency Department   \n",
+      "3549                 0  African American      M  170.20  Emergency Department   \n",
+      "...                ...               ...    ...     ...                   ...   \n",
+      "6062                 1         Caucasian      M  167.60        Operating Room   \n",
+      "5494                 0         Caucasian      F  157.50                 Floor   \n",
+      "5703                 1         Caucasian      M  170.20        Operating Room   \n",
+      "913                  1         Caucasian      M  177.80  Emergency Department   \n",
+      "7681                 0         Caucasian      M  190.50  Emergency Department   \n",
+      "\n",
+      "      ... leukemia  lymphoma solid_tumor_with_metastasis Binary  \\\n",
+      "952   ...        0         0                           0      0   \n",
+      "4283  ...        0         0                           0      1   \n",
+      "5521  ...        0         0                           0      1   \n",
+      "9655  ...        0         0                           0      0   \n",
+      "3549  ...        0         0                           0      1   \n",
+      "...   ...      ...       ...                         ...    ...   \n",
+      "6062  ...        0         0                           0      1   \n",
+      "5494  ...        0         0                           0      0   \n",
+      "5703  ...        0         0                           0      1   \n",
+      "913   ...        0         0                           0      1   \n",
+      "7681  ...        0         0                           0      1   \n",
+      "\n",
+      "      ethnicity_African American  ethnicity_Asian  ethnicity_Caucasian  \\\n",
+      "952                        False            False                 True   \n",
+      "4283                       False            False                False   \n",
+      "5521                        True            False                False   \n",
+      "9655                       False            False                 True   \n",
+      "3549                        True            False                False   \n",
+      "...                          ...              ...                  ...   \n",
+      "6062                       False            False                 True   \n",
+      "5494                       False            False                 True   \n",
+      "5703                       False            False                 True   \n",
+      "913                        False            False                 True   \n",
+      "7681                       False            False                 True   \n",
+      "\n",
+      "      ethnicity_Hispanic  ethnicity_Native American  ethnicity_Other/Unknown  \n",
+      "952                False                      False                    False  \n",
+      "4283                True                      False                    False  \n",
+      "5521               False                      False                    False  \n",
+      "9655               False                      False                    False  \n",
+      "3549               False                      False                    False  \n",
+      "...                  ...                        ...                      ...  \n",
+      "6062               False                      False                    False  \n",
+      "5494               False                      False                    False  \n",
+      "5703               False                      False                    False  \n",
+      "913                False                      False                    False  \n",
+      "7681               False                      False                    False  \n",
+      "\n",
+      "[6557 rows x 59 columns]\n",
+      "X_test:       Unnamed: 0  encounter_id  hospital_id   age        bmi  \\\n",
+      "136          136        255681          118  64.0  35.951557   \n",
+      "4882        4882        271074          118  63.0  31.095278   \n",
+      "2313        2313        252155          118  74.0  22.070312   \n",
+      "1886        1886        188562          118  65.0        NaN   \n",
+      "3000        3000        169616           77  77.0  28.343555   \n",
+      "...          ...           ...          ...   ...        ...   \n",
+      "4660        4660        167729           33  88.0  22.148438   \n",
+      "7785        7785        274435           77  74.0  28.632002   \n",
+      "7579        7579        163963          118  81.0  28.503214   \n",
+      "1260        1260        204421           83  55.0  27.407810   \n",
+      "3153        3153        222953          118  39.0  28.515625   \n",
+      "\n",
+      "      elective_surgery         ethnicity gender  height hospital_admit_source  \\\n",
+      "136                  1         Caucasian      M  170.00        Operating Room   \n",
+      "4882                 0         Caucasian      M  182.00  Emergency Department   \n",
+      "2313                 1          Hispanic      M  160.00        Operating Room   \n",
+      "1886                 0         Caucasian      M  180.30                 Floor   \n",
+      "3000                 0  African American      M  175.30  Emergency Department   \n",
+      "...                ...               ...    ...     ...                   ...   \n",
+      "4660                 0         Caucasian      F  160.00  Emergency Department   \n",
+      "7785                 0         Caucasian      F  152.40  Emergency Department   \n",
+      "7579                 0         Caucasian      F  165.00  Emergency Department   \n",
+      "1260                 1         Caucasian      M  195.59        Operating Room   \n",
+      "3153                 0          Hispanic      F  160.00  Emergency Department   \n",
+      "\n",
+      "      ... leukemia  lymphoma solid_tumor_with_metastasis Binary  \\\n",
+      "136   ...        0         0                           0      1   \n",
+      "4882  ...        0         0                           0      1   \n",
+      "2313  ...        0         0                           0      1   \n",
+      "1886  ...        0         0                           0      1   \n",
+      "3000  ...        0         0                           1      1   \n",
+      "...   ...      ...       ...                         ...    ...   \n",
+      "4660  ...        0         0                           0      0   \n",
+      "7785  ...        0         0                           0      0   \n",
+      "7579  ...        0         0                           0      0   \n",
+      "1260  ...        0         0                           0      1   \n",
+      "3153  ...        0         0                           0      0   \n",
+      "\n",
+      "      ethnicity_African American  ethnicity_Asian  ethnicity_Caucasian  \\\n",
+      "136                        False            False                 True   \n",
+      "4882                       False            False                 True   \n",
+      "2313                       False            False                False   \n",
+      "1886                       False            False                 True   \n",
+      "3000                        True            False                False   \n",
+      "...                          ...              ...                  ...   \n",
+      "4660                       False            False                 True   \n",
+      "7785                       False            False                 True   \n",
+      "7579                       False            False                 True   \n",
+      "1260                       False            False                 True   \n",
+      "3153                       False            False                False   \n",
+      "\n",
+      "      ethnicity_Hispanic  ethnicity_Native American  ethnicity_Other/Unknown  \n",
+      "136                False                      False                    False  \n",
+      "4882               False                      False                    False  \n",
+      "2313                True                      False                    False  \n",
+      "1886               False                      False                    False  \n",
+      "3000               False                      False                    False  \n",
+      "...                  ...                        ...                      ...  \n",
+      "4660               False                      False                    False  \n",
+      "7785               False                      False                    False  \n",
+      "7579               False                      False                    False  \n",
+      "1260               False                      False                    False  \n",
+      "3153                True                      False                    False  \n",
+      "\n",
+      "[2811 rows x 59 columns]\n",
+      "y_train: 952     1\n",
+      "4283    0\n",
+      "5521    0\n",
+      "9655    0\n",
+      "3549    0\n",
+      "       ..\n",
+      "6062    0\n",
+      "5494    0\n",
+      "5703    0\n",
+      "913     0\n",
+      "7681    0\n",
+      "Name: diabetes_mellitus, Length: 6557, dtype: int64\n",
+      "y_test: 136     0\n",
+      "4882    1\n",
+      "2313    0\n",
+      "1886    0\n",
+      "3000    1\n",
+      "       ..\n",
+      "4660    0\n",
+      "7785    0\n",
+      "7579    0\n",
+      "1260    0\n",
+      "3153    0\n",
+      "Name: diabetes_mellitus, Length: 2811, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "split(df_processed)"
+    "X_train, X_test, y_train, y_test = splitdata(df_processed, 'diabetes_mellitus')\n",
+    "\n",
+    "# Print the values\n",
+    "print(f'X_train: {X_train}')\n",
+    "print(f'X_test: {X_test}')\n",
+    "print(f'y_train: {y_train}')\n",
+    "print(f'y_test: {y_test}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3613668a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train ROC AUC: 0.6703545314832863\n",
+      "Test ROC AUC: 0.6689398850455878\n",
+      "(0.6703545314832863, 0.6689398850455878)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Execute training and metrics calculations\n",
+    "features = ['age', 'height', 'weight', 'aids', 'cirrhosis', 'hepatic_failure',\n",
+    "            'immunosuppression', 'leukemia', 'lymphoma', 'solid_tumor_with_metastasis']\n",
+    "target = ['diabetes_mellitus']  \n",
+    "X_train = X_train[features] \n",
+    "X_test = X_test[features]\n",
+    "y_train = y_train\n",
+    "y_test = y_test\n",
+    "result = model(X_train, X_test, y_train, y_test)\n",
+    "print(result)"
    ]
   }
  ],
